# traits-dev

./: .gitignore  LICENSE  Makefile  PROMPT.md  README.md  RULES.md  TAXONOMY.md  TODO-baseline-trait-review.md  _RATIONALE.txt  strings.txt
hacks/: traiter-linux.sh
metadata/: package_json_benign.yaml
metadata/analytics/: utm.yaml
metadata/apple/: bundle-id.yaml  traits.yaml
metadata/arch/: arm64.yaml  compat_missing.yaml
metadata/binary/: elf-identified.yaml  python-bytecode.yaml
metadata/builder/: ap-compiler.yaml  go.yaml  swagger.yaml  tauri.yaml
metadata/compiler/: golang.yaml
metadata/config/: java-resource.yaml  javascript-network.yaml
metadata/encoded-payload/: base64.yaml
metadata/entitlements/: traits.yaml
metadata/file/: blobs.yaml  size.yaml  system.yaml
metadata/format/: massive_executable.yaml  pe-anomalies.yaml  structural-metrics.yaml  tiny.yaml
objectives/: elex-loader.yaml.bak
scripts/: pre-commit
testdata/: expectations.toml
testdata/drop-exec/: Bootstrap.kt  Bootstrap.scala  Dockerfile  Dropper.cs  Jenkinsfile  LaunchAgent.plist  Makefile  Rakefile  background.js  build.gradle  build.rs  ci.yml  composer.json  dropper.bat  dropper.c  dropper.cpp  dropper.ex  dropper.go  dropper.html  dropper.lua  dropper.m  dropper.php  dropper.pl  dropper.ps1  dropper.rb  dropper.rs  dropper.scpt.applescript  dropper.swift  dropper.ts  dropper.vbs  dropper.zig  extconf.rb  helper.desktop  helper.service  install.sh  install_devshm.sh  install_vartmp_777.sh  install_wget_home.sh  package-lock.json  postinstall.js  (+3 more)
(+15532 files in other folders)
